@@ -19,6 +19,8 @@ public abstract class AbstractBytesInterceptor<T extends BufferFrame, R> impleme
   protected static final int IGNORE_LIMIT = 16;
   private final Logger logger = Logger.getLogger(getClass().getName());
   @Nonnull
+  private final String name;
+  @Nonnull
   private final ByteBuffer outBuffer;
   @Nonnull
   private final ByteBuffer ignoreBuffer;
@@ -27,7 +29,8 @@ public abstract class AbstractBytesInterceptor<T extends BufferFrame, R> impleme
   @Nullable
   private final T pingRequest;
 
-  protected AbstractBytesInterceptor(@Nonnull BaudRate baudRate, @Nullable T pingRequest, int ignoreBufferLimit) {
+  protected AbstractBytesInterceptor(@Nonnull String name, @Nonnull BaudRate baudRate, @Nullable T pingRequest, int ignoreBufferLimit) {
+    this.name = name;
     outBuffer = ByteBuffer.allocate(baudRate.get());
     ignoreBuffer = ByteBuffer.allocate(ignoreBufferLimit);
     this.baudRate = baudRate;
@@ -38,7 +41,7 @@ public abstract class AbstractBytesInterceptor<T extends BufferFrame, R> impleme
   public final Stream<R> apply(@Nonnull ByteBuffer src) {
     Collection<R> responses = innerProcessIn(src);
     if (logger.isLoggable(LOG_LEVEL_LEXEMES)) {
-      responses.forEach(response -> logger.log(LOG_LEVEL_LEXEMES, String.format("#%x %s", hashCode(), response)));
+      responses.forEach(response -> logger.log(LOG_LEVEL_LEXEMES, "#%x %s".formatted(hashCode(), response)));
     }
     return responses.stream();
   }
@@ -56,13 +59,19 @@ public abstract class AbstractBytesInterceptor<T extends BufferFrame, R> impleme
     outBuffer.flip();
     if (logger.isLoggable(LOG_LEVEL_ERRORS)) {
       if (outBuffer.limit() > 1) {
-        logger.log(LOG_LEVEL_ERRORS, String.format("#%x %s - %d bytes OUT to hardware", hashCode(), request, outBuffer.limit()));
+        logger.log(LOG_LEVEL_ERRORS, "#%x %s - %d bytes OUT to hardware".formatted(hashCode(), request, outBuffer.limit()));
       }
       else {
-        logger.log(LOG_LEVEL_ERRORS, String.format("#%x %s - OUT to hardware", hashCode(), request));
+        logger.log(LOG_LEVEL_ERRORS, "#%x %s - OUT to hardware".formatted(hashCode(), request));
       }
     }
     return outBuffer;
+  }
+
+  @Nonnull
+  @Override
+  public final String name() {
+    return name;
   }
 
   @Nonnegative
