@@ -78,7 +78,7 @@ public final class LineFileCollector implements Collector<Object, BufferedWriter
           bufferedWriter.write(object.toString());
         }
         catch (IOException e) {
-          Logger.getLogger(getClass().getName()).log(Level.WARNING, String.format("Exception when writing object: %s", object), e);
+          Logger.getLogger(getClass().getName()).log(Level.WARNING, "Exception when writing object: %s".formatted(object), e);
           errorFlag = true;
         }
       }
